# react-native-address-generator

./: CONTRIBUTING.md  README.md  package-lock.json  package.json  react-native-address-generator.podspec  setup-android-bindings.js  setup-ios-bindings.js  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/addressgenerator/: AddressGeneratorModule.kt  AddressGeneratorPackage.kt
android/src/main/java/uniffi/mobile/: mobile.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/addressgeneratorexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/AddressGeneratorExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/AddressGeneratorExample.xcodeproj/: project.pbxproj
example/ios/AddressGeneratorExample.xcodeproj/xcshareddata/xcschemes/: AddressGeneratorExample.xcscheme
example/ios/AddressGeneratorExample.xcworkspace/: contents.xcworkspacedata
example/ios/AddressGeneratorExampleTests/: AddressGeneratorExampleTests.m
example/src/: App.tsx
ios/: AddressGenerator.mm  AddressGenerator.swift  mobile.swift
ios/Frameworks/Mobile.xcframework/: Info.plist
ios/Frameworks/Mobile.xcframework/ios-arm64-simulator/Headers/: mobileFFI.h
ios/Frameworks/Mobile.xcframework/ios-arm64/Headers/: mobileFFI.h
rust/: Cargo.toml
rust/src/: lib.rs
src/: index.tsx
